# mlops-sentiment-analysis

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
.dvc/: config
conf/: config.yaml
data/: .gitignore  test_data.csv.dvc  train_data.csv.dvc
models/: .gitignore  pipeline_tfidf_logreg.onnx.dvc  pipeline_tfidf_svm.onnx.dvc
sentiment_analysis/: classifiers.py  infer.py  preprocessing.py  train.py  utils.py
