[tool.poetry]
name = "sentiment_analysis"
version = "0.1.0"
description = "TBA"
authors = ["Kirill Rubashevskiy <kirill.rubashevskiy@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
skl2onnx = "^1.16.0"
onnxruntime = "^1.16.3"
dvc = "^3.33.3"
dvc-s3 = "^2.23.0"
mlflow = "^2.9.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
jupyter = "^1.0.0"

[tool.black]
line-length = 90
target-version = ["py310"]

[tool.isort]
src_paths = ["sentiment-analysis"]
profile = "black"
line_length = 90
lines_after_imports = 2

[tool.nbqa.config]
black = "pyproject.toml"
isort = "pyproject.toml"
flake8 = "setup.cfg"

[tool.nbqa.mutate]
black = 1
isort = 1

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
